--- a/data/device.htm
+++ b/data/device.htm
@@ -10,7 +10,7 @@
    function handleServerResponse(){
     if(xmlHttp.readyState==4 && xmlHttp.status==200){
      // XML, ID
-     xml_to_val('timeLed','led');
+     xml_to_val('timeled','led');
      xml_to_val('times1' ,'time1');
      xml_to_val('times2','time2');
      document.getElementById('ssdp').innerHTML=xml('SSDP');
@@ -18,6 +18,7 @@
    }
    function led(submit){
     server = "/led";
+	alert(time2);
     send_request(submit,server);
    }
    function set_rgb(submit,r,g,b){
