--- a/data/device.htm
+++ b/data/device.htm
@@ -22,8 +22,11 @@
     send_request(submit,server);
    }
    function set_rgb(submit,r,g,b){
-    server = "/rgb?r="+r+"&g="+g+"&b="+b;
+    server = "/rgb?r="+r+"&g="+b+"&b="+g;
     document.getElementById('url').innerHTML="http://"+document.domain+server;
+    //var script = document.createElement('script');
+    //script.src = '//ipinfo.io';
+    //alert(document.getElementsByTagName('ip')[1].appendChild(script));
     send_request(submit,server);
    }
    function set_time(submit){
@@ -86,11 +89,12 @@
 
   <script>
    //var arr = ["255,255,255","167,25,75","254,39,18","251,153,2","250,188,2","254,254,51","208,234,43","102,176,50","3,145,206","2,71,254","61,1,165","134,1,175"];
-   var arr = ["255,000,000","255,100,000","255,255,000","100,255,255","000,255,000","000,255,100","000,255,255","000,100,255","000,000,255","100,000,255","255,000,255","255,000,100"];
+   var arr = ["255,0,0","255,100,0","255,255,0","100,255,255","0,255,0","0,255,100","0,255,255","0,100,255","0,0,255","100,0,255","255,0,255","255,0,100"];
    for (var i = 0; i < arr.length; i++) {
     document.getElementById('color').innerHTML +='<input type="submit" class="btn btn-block btn-default" style="background-color:rgb('+arr[i]+');width:25%;display:inline-block" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+')" value="'+arr[i]+'">';
+    //document.getElementById('color').innerHTML +='<div class="btn-group"><input type="submit" class="btn btn-block btn-default" style="background-color:rgb('+arr[i]+');width:25%;display:inline-block" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+')" value="'+arr[i]+'"><a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+',5)">Включить на 5 минут</a></li><li><a href="#" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+',15)">Включить на 15 минут</a></li><li><a href="#" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+',30)">Включить на 30 минут</a></li><li><a href="#" onclick="set_rgb(this,'+arr[i].split(',')[0]+','+arr[i].split(',')[1]+','+arr[i].split(',')[2]+',60)">Включить на 60 минут</a></li></ul></div>';
    }
   </script>
-
+  <!-- script src="https://code.jquery.com/jquery-1.10.2.min.js"></script -->
  </body>
 </html>
