--- a/data/device.htm
+++ b/data/device.htm
@@ -15,14 +15,16 @@
     send_request(submit,server);
    }
    function set_rgb(submit,r,g,b){
-    server = "/rgb?r="+r+"&g="+b+"&b="+g;
-    url="Local IP: http://"+document.domain+server;
+    server = "/rgb?r="+r+"&g="+b+"&b="+g+"&t="+val('led');
+    document.getElementById('url').innerHTML="Local IP: http://"+document.domain+server;
     if(navigator.onLine) {
-     xmlHttp.open("GET","https://api.ipify.org?format=text",false);
-     xmlHttp.send();
-     url+="<br>Global IP: http://"+xmlHttp.responseText+server;
+     var oReq = new XMLHttpRequest();
+     oReq.open("GET","https://api.ipify.org?format=text",false);
+     oReq.send();
+     //oReq.onload = function(e) {
+     document.getElementById('url').innerHTML+="<br>Global IP: http://"+oReq.responseText+server;
+     //}
     }
-    document.getElementById('url').innerHTML=url;
     send_request(submit,server);
    }
    function set_time(submit){
@@ -46,35 +48,36 @@
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">Включая led ниже формируется URL цвета, вы можете скопировать эту ссылку, сделать ярык, и когда вы перейдете по этой ссылки включится led.</div>
+     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, наприме, новое сообщение в facebook, twitter, задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".</div>
      <input type="submit" class="btn btn-block btn-primary" onclick="set_rgb(this,255,255,255)" value="Включить белый (255,255,255)">
      <div id="color" class="inner"></div>
      <input type="submit" class="btn btn-block btn-primary" onclick="set_rgb(this,0,0,0)" value="Выключить (0,0,0)">
      <h4 id="url"></h4>
      <hr>
-     <div class="alert alert-dismissible alert-warning"><b>Обратите внимание</b> Настраивая время перед одиночными цифрами пишите 0. Пример: 03:09:10, с право в ячейках вы можете указать работу двигателя в секунах.</div>
-
-     <h2>Настройки времи</h2>
      <div class="row">
-      <div class="col-sm-6">
-       <h4>Таймер 1 (ВКЛ):</h4>
-       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
-       <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time1(this);" type="submit">
-      </div>
-      <div class="col-sm-6">
-       <h4>Таймер 2 (ВКЛ):</h4>
-       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
-       <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time2(this);" type="submit">
-      </div>
-     </div>
-     <div class="row">
-      <h4>Время работы LED</h4>
+      <h2>Время работы LED</h2>
       <div class="col-sm-8">
-       <div class="alert alert-dismissible alert-info">Здесь вы можете указать время в минутах сколько будит гореть LED.</div>
+       <div class="alert alert-dismissible alert-info">Здесь вы можете указать время в минутах сколько будит гореть LED. В url который появляется выше вы можете менять время изменяя "&t=время"</div>
       </div>
       <div class="col-sm-4">
        <input id="led" value="{{timeled}}" class="form-control" pattern="[0-9]{1,2}[.]{1}[0-9]{1,2}">
        <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time(this);" type="submit">
+      </div>
+     </div>
+     <hr>
+     <h2>Будильники</h2>
+     <div class="row">
+      <div class="col-sm-6">
+       <h4>Будильник 1:</h4>
+       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
+       <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time1(this);" type="submit">
+       <h4>Будильник 2:</h4>
+       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
+       <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time2(this);" type="submit">
+      </div>
+      <div class="col-sm-6">
+       <div class="alert alert-dismissible alert-warning"><b>Обратите внимание</b> Настраивая время перед одиночными цифрами пишите 0. Пример: 03:09:10.
+        Будильник будит повторять звонить каждый день. Отключить его можно написав 00:00:00</div>
       </div>
      </div>
      <hr>
