Избавились от jquery

--- a/data/index.htm
+++ b/data/index.htm
@@ -14,25 +14,31 @@
      xhttp = new ActiveXObject("Microsoft.XMLHTTP");
     }
 
-    var script = document.createElement("script");
-    script.src = "/jquery.min.js";
-    script.type = "text/javascript";
-    script.onload = function () {iplocation();};
-    document.getElementsByTagName("head")[0].appendChild(script);
+    // var script = document.createElement("script");
+    // script.src = "/jquery.min.js";
+    // script.type = "text/javascript";
+    // script.onload = function () {iplocation();};
+    // document.getElementsByTagName("head")[0].appendChild(script);
+    iplocation();
 
     var dt = new Date();
     document.getElementById('date').innerHTML = dt.getDate()+' '+["Воскресенья","Понидельник","Вторник","Среда","Четверг","Пятница","Суббота"][dt.getDay()]+'<br><small>'+["Январь","Февраль","Март","Апрель","Май","Июнь","Июль","Август","Сентябрь","Октябрь","Ноябрь","Декабрь"][dt.getMonth()]+' '+dt.getFullYear()+'г.<\/small>';
    }
 
    function finddevice() {
-    $("#content").html('<div class="alert alert-dismissible alert-info"><div class="loader"></div><strong>Пожалуйста подождите, идет сканирование сети.</strong></div>');
-    $.get("/devices?"+Math.floor(Math.random()*10000), function(data) {
-     setTimeout(function(){iplocation()}, 7000);
-    });
+    // $("#content").html('<div class="alert alert-dismissible alert-info"><div class="loader"></div><strong>Пожалуйста подождите, идет сканирование сети.</strong></div>');
+    // $.get("/devices?"+Math.floor(Math.random()*10000), function(data) {
+    //  setTimeout(function(){iplocation()}, 7000);
+    // });
+    document.getElementById('content').innerHTML='<div class="alert alert-dismissible alert-info"><div class="loader"></div><strong>Пожалуйста подождите, идет сканирование сети.</strong></div>';
+    xhttp.open("GET", "/devices?"+Math.floor(Math.random()*10000), false);
+    xhttp.send();
+    setTimeout(function(){iplocation()}, 7000);
    }
 
    function iplocation() {
-    $("#content").html("");
+    //$("#content").html("");
+    document.getElementById('content').innerHTML='';
     xhttp.open("GET", "/iplocation.xml?"+Math.floor(Math.random()*10000), false);
     xhttp.send();
     xmlDoc = xhttp.responseXML;
@@ -47,57 +53,69 @@
     }
    }
 
-
    function loadBlock(ipval) {
-    //xhttp.open("GET", "http://"+ipval+"/block.htm?"+Math.floor(Math.random()*10000), false);
-    //xhttp.send();
-    //data = xhttp.responseText;
-    //xhttp.open("GET", "http://"+ipval+"/config.xml?"+Math.floor(Math.random()*10000), false);
-    //xhttp.send();
-    //data2 = xhttp.responseXML;
-    $.get("http://"+ipval+"/block.htm?"+Math.floor(Math.random()*10000), function(data) {
-     $.get("http://"+ipval+"/config.xml?"+Math.floor(Math.random()*10000), function(data2) {
-      var new_string;
-      var $kids = data2.getElementsByTagName("Donnees")[0].childNodes;
-      [].forEach.call($kids, (el) => {
-       var tagName = el.tagName;
-       var cols = data2.getElementsByTagName(tagName)[0].textContent;
-       new_string = data.replace(new RegExp('{{'+tagName+'}}', 'g'), cols);
-       data = new_string;
-      });
-      //  var new_string;
-      //  var $kids = $(data2).find("Donnees").children();
-      //  $kids.each(function(){
-      //   var tagName=this.tagName;
-      //   var cols = $(data2).find(tagName).contents().eq(0).text();
-      //   new_string = data.replace(new RegExp('{{'+tagName+'}}', 'g'),cols);
-      //   data = new_string;
-      //  });
-      $(new_string).prependTo("#content");
-     });
+    xhttp.open("GET", "http://"+ipval+"/block.htm?"+Math.floor(Math.random()*10000), false);
+    xhttp.send();
+    data = xhttp.responseText;
+    xhttp.open("GET", "http://"+ipval+"/config.xml?"+Math.floor(Math.random()*10000), false);
+    xhttp.send();
+    data2 = xhttp.responseXML;
+    // $.get("http://"+ipval+"/block.htm?"+Math.floor(Math.random()*10000), function(data) {
+    //  $.get("http://"+ipval+"/config.xml?"+Math.floor(Math.random()*10000), function(data2) {
+    var new_string;
+    var $kids = data2.getElementsByTagName("Donnees")[0].childNodes;
+    [].forEach.call($kids, (el) => {
+     var tagName = el.tagName;
+     var cols = data2.getElementsByTagName(tagName)[0].textContent;
+     new_string = data.replace(new RegExp('{{'+tagName+'}}', 'g'), cols);
+     data = new_string;
     });
+    //  var new_string;
+    //  var $kids = $(data2).find("Donnees").children();
+    //  $kids.each(function(){
+    //   var tagName=this.tagName;
+    //   var cols = $(data2).find(tagName).contents().eq(0).text();
+    //   new_string = data.replace(new RegExp('{{'+tagName+'}}', 'g'),cols);
+    //   data = new_string;
+    //  });
+    document.getElementById('content').innerHTML+=new_string;
+    //$(new_string).prependTo("#content");
+    // });
+    // });
    }
-
 
    function ajax(blockid, pagename, submit) {
     old_submit = submit.value;
     var d = new Date(); // for now
     datetext = d.getHours()+":"+d.getMinutes()+":"+d.getSeconds();
-    $("#history").prepend('<li>'+datetext+'<span class="history">'+old_submit+'</span></li>');
+    //$("#history").prepend('<li>'+datetext+'<span class="history">'+old_submit+'</span></li>');
+    document.getElementById('history').innerHTML+='<li>'+datetext+'<span class="history">'+old_submit+'</span></li>';
     //alert($(submit).parent().attr('class'));
     submit.value = 'Подождите...';
-    $("input").prop('disabled', true);
-    $.get("http://"+blockid+"/"+pagename, function(data) {
-     submit.value=data;
-     setTimeout(function(){
-      submit.value=old_submit;
-      //$.get("http://"+blockid+"/block.htm?"+Math.floor(Math.random()*10000), function(data2) {
-      // $($(submit).parent()).remove();
-      // $(data2).prependTo("#content");
-      $("input").prop('disabled', false);
-      //});
-     }, 1000);
-    });
+    submit_disabled(true);
+    //$("input").prop('disabled', true);
+    xhttp.open("GET", "http://"+blockid+"/"+pagename, false);
+    xhttp.send();
+    //  $.get("http://"+blockid+"/"+pagename, function(data) {
+    //  submit.value=data;
+    submit.value = xhttp.responseText;
+    setTimeout(function(){
+     submit.value=old_submit;
+     //$.get("http://"+blockid+"/block.htm?"+Math.floor(Math.random()*10000), function(data2) {
+     // $($(submit).parent()).remove();
+     // $(data2).prependTo("#content");
+     submit_disabled(false);
+     //$("input").prop('disabled', false);
+     //});
+    }, 1000);
+    // });
+   }
+
+   function submit_disabled(request){
+    var inputs = document.getElementsByTagName("input");
+    for (var i = 0; i < inputs.length; i++) {
+     if (inputs[i].type === 'submit') {inputs[i].disabled = request;}
+    }
    }
   </script>
  </head>
