--- a/data/block.htm
+++ b/data/block.htm
@@ -1,16 +1,16 @@
 <div class="block col-md-5">
-<h5 class="alert-info">{{SSDP}}</h5>
-<div class="alert alert-dismissible alert-warning">
-Будильник 1: <b>{{times1}}</b>
-<br>Будильник 2:  <b>{{times2}}</b>
-<br>Время работы: <b>{{timeled}}</b>мин.
-</div>
-<input type="submit" onclick="ajax('{{ip}}','rgb?r=255&g=255&b=255&t={{timeled}}',this);" value="Включить белый" class="btn btn-block btn-primary">
-<input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Красный" onclick="ajax('{{ip}}','rgb?r=255&g=0&b=0&t={{timeled}}',this);" type="submit">
-<input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Зеленый" onclick="ajax('{{ip}}','rgb?r=0&g=255&b=0&t={{timeled}}',this);" type="submit">
-<input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Синий" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=255&t=1',this);" type="submit">
- <input type="submit" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=0&t={{timeled}}',this);" value="Выключить" class="btn btn-block btn-primary">
-<hr>
-<div class="alert alert-dismissible alert-info">Изменить конфигурацию устройсва вы можете на странице управления</div>
-<a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">Страница управления</a>
+ <h5 class="alert-info">{{SSDP}}</h5>
+ <div class="alert alert-dismissible alert-warning">
+  Будильник 1: <b>{{times1}}</b>
+  <br>Будильник 2:  <b>{{times2}}</b>
+  <br>Время работы: <b>{{timeled}}</b>мин.
+ </div>
+ <input type="submit" onclick="ajax('{{ip}}','rgb?r=255&g=255&b=255&t={{timeled}}',this);" value="Включить белый" class="btn btn-block btn-primary">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Красный" onclick="ajax('{{ip}}','rgb?r=255&g=0&b=0&t={{timeled}}',this);" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Зеленый" onclick="ajax('{{ip}}','rgb?r=0&g=255&b=0&t={{timeled}}',this);" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Синий" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=255&t={{timeled}}',this);" type="submit">
+ <input type="submit" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=0&t=1',this);" value="Выключить" class="btn btn-block btn-primary">
+ <hr>
+ <div class="alert alert-dismissible alert-info">Изменить конфигурацию устройсва вы можете на странице управления</div>
+ <a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">Страница управления</a>
 </div>
