--- a/data/block.htm
+++ b/data/block.htm
@@ -5,6 +5,7 @@
   <br>Будильник 2:  <b>{{times2}}</b>
   <br>Время работы: <b>{{timeled}}</b>мин.
  </div>
+ <input type="color" onchange="ajax('{{ip}}','rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16)+'&t={{timeled}}',this);" class="btn btn-block btn-primary" style="height:40px;">
  <input type="submit" onclick="ajax('{{ip}}','rgb?r=255&g=255&b=255&t={{timeled}}',this);" value="Включить белый" class="btn btn-block btn-primary">
  <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Красный" onclick="ajax('{{ip}}','rgb?r=255&g=0&b=0&t={{timeled}}',this);" type="submit">
  <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Зеленый" onclick="ajax('{{ip}}','rgb?r=0&g=255&b=0&t={{timeled}}',this);" type="submit">
